--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -13,7 +13,15 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-
+    steps:
+      - uses: actions/checkout@v2
+      - name: node install and webpack build
+        run: |
+          npm install
+          npm run build
+  test:
+    
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         node-version: [14.x, 15.x]
@@ -26,6 +34,8 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
-    - run: npm ci
-    - run: npm run build --if-present
-    - run: npm test
+    - name: npm install and test
+      run: |
+        npm install
+        npm test
+
