--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -19,9 +19,16 @@ jobs:
         run: |
           npm install
           npm run build
+      - uses: actions/upload-artifact@master
+        with:
+          name: Webpack build 
+          path: public/
+ 
+          
   test:
     
     runs-on: ubuntu-latest
+    needs: build
     strategy:
       matrix:
         node-version: [14.x, 15.x]
@@ -30,6 +37,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - uses: actions/download-artifact@master
+      with:
+        name: Webpack build 
+        path: public
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v2
       with:
