--- a/.github/workflows/giphy-genertor.yml
+++ b/.github/workflows/giphy-genertor.yml
@@ -1,4 +1,4 @@
-name: Giphy Generators1
+name: Giphy Generator
 
 on:
   issues:
@@ -10,12 +10,12 @@ on:
 
 jobs:
   giphy-generator:
-    name: GIPHY Generator
     runs-on: ubuntu-latest
+    
     steps:
       - name: GIPHY Generator
         id: giphy_generator
-        uses: iamhughes/giphy-generator@v1
+        uses: iamhughes/giphy-generator@v1.0.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
           GIPHY_TOKEN: ${{ secrets.GIPHY_TOKEN }} # This token should be created on giphy.com: https://developers.giphy.com/dashboard/?create=true
